--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -28,9 +28,14 @@ updates:
   labels:
   - dependencies
   - govuk-pay
-  - java
-- package-ecosystem: "github-actions"
+  - docker
+- package-ecosystem: github-actions
   directory: "/"
   schedule:
-    interval: "daily"
+    interval: daily
     time: "03:00"
+  open-pull-requests-limit: 10
+  labels:
+  - dependencies
+  - govuk-pay
+  - github_actions
