--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,4 +29,6 @@ jobs:
         run: |
           docker pull govukpay/postgres:11.1
       - name: Run integration tests
-        run: mvn clean verify
+        run: |
+          echo "${{ github.sha }}"
+          mvn clean verify
