[to be squashed] final tidy up

--- a/.github/workflows/post-merge.yml
+++ b/.github/workflows/post-merge.yml
@@ -1,7 +1,7 @@
 name: Post Merge
 
 on:
-  pull_request: #to be deleted
+  pull_request:
   push:
     branches:
       - master
@@ -14,7 +14,7 @@ jobs:
     uses: ./.github/workflows/run-tests.yml
 
   provider-contract-tests:
-    uses: alphagov/pay-ci/.github/workflows/_run-provider-contract-tests.yml@PP-9236
+    uses: alphagov/pay-ci/.github/workflows/_run-provider-contract-tests.yml@master
     secrets:
       pact_broker_username: ${{ secrets.pact_broker_username }}
       pact_broker_password: ${{ secrets.pact_broker_password }}
