--- a/.github/workflows/_run-pact-provider-tests.yml
+++ b/.github/workflows/_run-pact-provider-tests.yml
@@ -27,6 +27,9 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
+      - name: Get Provider SHA
+        run: |
+          echo ::set-output name=provider-sha::$( curl -u "u:${{github.token}}" https://api.github.com/repos/alphagov/pay-adminusers/git/ref/heads/master | jq .object.sha | tr -d '"' )
       - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
         with:
           repository: alphagov/pay-adminusers
@@ -52,7 +55,7 @@ jobs:
           -DrunContractTests \
           -DCONSUMER="${{ inputs.consumer }}" \
           -DPACT_CONSUMER_TAG="${{ inputs.consumer_tag }}" \
-          -Dpact.provider.version="${{ github.sha }}" \
+          -Dpact.provider.version="${{ steps.get-sha.outputs.provider-sha }}" \
           -Dpact.verifier.publishResults=true \
           -DPACT_BROKER_HOST=pay-pact-broker.cloudapps.digital \
           -DPACT_BROKER_USERNAME="${{ secrets.pact_broker_username }}" \
