--- a/.github/workflows/_run-pact-provider-tests.yml
+++ b/.github/workflows/_run-pact-provider-tests.yml
@@ -27,12 +27,12 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
-      - name: Get Provider SHA
-        run: |
-          echo ::set-output name=provider-sha::$( curl -u "u:${{github.token}}" https://api.github.com/repos/alphagov/pay-adminusers/git/ref/heads/master | jq .object.sha | tr -d '"' )
       - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
         with:
           repository: alphagov/pay-adminusers
+      - name: Get Provider SHA
+        run: |
+          echo ::set-output name=provider-sha::$(git rev-parse HEAD)
       - name: Set up JDK 11
         uses: actions/setup-java@f69f00b5e5324696b07f6b1c92f0470a6df00780
         with:
