--- a/.github/workflows/post-merge.yml
+++ b/.github/workflows/post-merge.yml
@@ -14,7 +14,7 @@ jobs:
   tests:
     uses: ./.github/workflows/run-tests.yml
 
-  publish-adminusers-consumer-contract-tests:
+  consumer-contract-tests:
     needs: tests
     runs-on: ubuntu-18.04
 
@@ -56,6 +56,7 @@ jobs:
   tag-release:
     needs:
       - provider-contract-tests
+      - consumer-contract-tests
     permissions:
       contents: write
     uses: alphagov/pay-ci/.github/workflows/_create-alpha-release-tag.yml@master
