--- a/.github/workflows/post-merge.yml
+++ b/.github/workflows/post-merge.yml
@@ -46,6 +46,16 @@ jobs:
           -DPACT_CONSUMER_TAG=master \
           -DPACT_CONSUMER_VERSION=${{ github.sha }}
 
+  ledger-provider-contract-tests:
+    needs: consumer-contract-tests
+    uses: alphagov/pay-ledger/.github/workflows/_run-pact-provider-tests.yml@master
+    with:
+      consumer: adminusers
+      consumer_tag: master
+    secrets:
+      pact_broker_username: ${{ secrets.pact_broker_username }}
+      pact_broker_password: ${{ secrets.pact_broker_password }}
+
   provider-contract-tests:
     needs: tests
     uses: alphagov/pay-ci/.github/workflows/_run-provider-contract-tests.yml@master
@@ -57,6 +67,7 @@ jobs:
     needs:
       - provider-contract-tests
       - consumer-contract-tests
+      - ledger-provider-contract-tests
     permissions:
       contents: write
     uses: alphagov/pay-ci/.github/workflows/_create-alpha-release-tag.yml@master
