--- a/src/test/resources/config/test-it-config.yaml
+++ b/src/test/resources/config/test-it-config.yaml
@@ -72,7 +72,12 @@ notify:
   inviteServiceUserDisabledEmailTemplateId: ${NOTIFY_INVITE_SERVICE_USER_DISABLED_EMAIL_TEMPLATE_ID:-pay-notify-invite-service-user-disabled-email-template-id}
   liveAccountCreatedEmailTemplateId: ${NOTIFY_LIVE_ACCOUNT_CREATED_EMAIL_TEMPLATE_ID:-pay-notify-live-account-created-email-template-id}
   stripeDisputeCreatedEmailTemplateId: ${NOTIFY_STRIPE_DISPUTE_CREATED_EMAIL_TEMPLATE_ID:-pay-notify-stripe-dispute-created-email-template-id}
+  stripeDisputeLostEmailTemplateId: ${NOTIFY_STRIPE_DISPUTE_LOST_EMAIL_TEMPLATE_ID:-pay-notify-stripe-dispute-lost-email-template-id}
+  stripeDisputeUpdatedEmailTemplateId: ${NOTIFY_STRIPE_DISPUTE_UPDATED_EMAIL_TEMPLATE_ID:-pay-notify-stripe-dispute-updated-email-template-id}
+  stripeDisputeWonEmailTemplateId: ${NOTIFY_STRIPE_DISPUTE_WON_EMAIL_TEMPLATE_ID:-pay-notify-stripe-dispute-won-email-template-id}
   notifyEmailReplyToSupportId: ${NOTIFY_EMAIL_REPLY_TO_SUPPORT_ID:-pay-notify-email-reply-to-support-id}
+  enableEmailsNotificationsForLivePaymentsDisputeUpdatesFrom: ${ENABLE_EMAILS_NOTIFICATIONS_FOR_LIVE_PAYMENTS_DISPUTE_UPDATES:-1672531201}
+  enableEmailsNotificationsForTestPaymentsDisputeUpdatesFrom: ${ENABLE_EMAILS_NOTIFICATIONS_FOR_TEST_PAYMENTS_DISPUTE_UPDATES:-1640995201}
 
 notifyDirectDebit:
   mandateCancelledEmailTemplateId: ${NOTIFY_MANDATE_CANCELLED_EMAIL_TEMPLATE_ID:-pay-mandate-cancelled-email-template-id}
