PP-9292 Add contract test for DISPUTE_CREATED event
Add a contact test to verify that connector sends the DISPUTE_CREATED
event with the content expected by adminusers in order to create the
personalisation for the email to send using Notify.

This copies some of the classes for the queue message contract tests
from ledger and modifies them as appropriate.

The `queueSchedulerThreadDelayInSeconds` configuration option is changed
to `queueSchedulerThreadDelayInMilliseconds` to allow for a short delay
for tests. No infra sets the
`EVENT_SUBSCRIBER_QUEUE_SCHEDULER_THREAD_DELAY_IN_SECONDS` environment
variable, meaning this change is fine to make.

Add step to the post-merge github actions workflow to run the connector
provider tests.

--- a/.github/workflows/post-merge.yml
+++ b/.github/workflows/post-merge.yml
@@ -58,6 +58,16 @@ jobs:
       pact_broker_username: ${{ secrets.pact_broker_username }}
       pact_broker_password: ${{ secrets.pact_broker_password }}
 
+  connector-provider-contract-tests:
+    needs: consumer-contract-tests
+    uses: alphagov/pay-connector/.github/workflows/_run-pact-provider-tests.yml@master
+    with:
+      consumer: adminusers
+      consumer_tag: master
+    secrets:
+      pact_broker_username: ${{ secrets.pact_broker_username }}
+      pact_broker_password: ${{ secrets.pact_broker_password }}
+
   provider-contract-tests:
     needs: tests
     uses: alphagov/pay-ci/.github/workflows/_run-provider-contract-tests.yml@master
@@ -70,6 +80,7 @@ jobs:
       - provider-contract-tests
       - consumer-contract-tests
       - ledger-provider-contract-tests
+      - connector-provider-contract-tests
     permissions:
       contents: write
     uses: alphagov/pay-ci/.github/workflows/_create-alpha-release-tag.yml@master
