PP-10041: Validate OTP during completion step
* Validate the OTP when the `/{code}/complete` endpoint is invoked, so long as the request is not for an 'existing user' journey.
* At present this will be repeating the validation of the OTP, which will already have been performed by an earlier call, but we will remove the earlier duplicate soon once we have unified the divergent journey flows.
* The `Invite` model now represents its `type` field as an instance of the `InviteType` enum, rather than as a string.

--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -1197,6 +1197,9 @@ components:
           example: +440787654534
         type:
           type: string
+          enum:
+          - USER
+          - SERVICE
           example: service
         user_exist:
           type: boolean
