--- a/.github/workflows/post-merge.yml
+++ b/.github/workflows/post-merge.yml
@@ -18,7 +18,7 @@ jobs:
 
   consumer-contract-tests:
     needs: tests
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     name: Publish and tag adminusers consumer pact
     steps:
