--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -389,15 +389,13 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Service'
+                $ref: '#/components/schemas/SearchServicesResponse'
           description: OK
         "400":
           description: Invalid JSON payload
       summary: Search services by name or merchant name
       tags:
-      - Toolbox
+      - Services
   /v1/api/services/{serviceExternalId}:
     get:
       operationId: findService
@@ -1350,6 +1348,17 @@ components:
           items:
             $ref: '#/components/schemas/Permission'
           uniqueItems: true
+    SearchServicesResponse:
+      type: object
+      properties:
+        merchant_results:
+          type: array
+          items:
+            $ref: '#/components/schemas/Service'
+        name_results:
+          type: array
+          items:
+            $ref: '#/components/schemas/Service'
     Service:
       type: object
       properties:
