PP-10051 Refactor user invite tests
- Refactor to use MockitoExtension
- Remove unnecessary stubbing
- Use Hamcrest assertions
- Fix intellij warnings for JUnit5 tests

--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -730,6 +730,8 @@ paths:
       tags:
       - Users
     post:
+      description: This is only used by the Pay CLI for creating Users. Users are
+        usually created by completing an invite
       operationId: createUser
       requestBody:
         content:
@@ -1238,8 +1240,6 @@ components:
         email:
           type: string
           example: example@example.gov.uk
-        otp_key:
-          type: string
         role_name:
           type: string
           example: view-only
